# Brick2

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_automated_tests.py  test_simple_ci.py
.github/workflows/: ci.yml  performance.yml  security.yml
alembic/: env.py
src/: __init__.py
src/brick2/: __init__.py  __main__.py  main.py
src/brick2/api/: deps.py
src/brick2/api/v1/: api.py
src/brick2/api/v1/endpoints/: ads.py  campaigns.py  performance.py  platform.py  users.py
src/brick2/core/: config.py  database.py  exceptions.py  security.py
src/brick2/models/: __init__.py  ad.py  base.py  campaign.py  knowledge_node.py  knowledge_relationship.py  lead.py  memory.py  orchestration_session.py  performance.py  user.py
src/brick2/schemas/: __init__.py  ad.py  campaign.py  knowledge_node.py  knowledge_relationship.py  lead.py  memory.py  orchestration_session.py  performance.py  platform.py  user.py
src/brick2/services/: __init__.py  ad.py  base.py  campaign.py  knowledge_node.py  knowledge_relationship.py  lead.py  memory.py  orchestration_session.py  performance.py  platform.py  platform_integration.py  user.py
tests/: conftest.py
tests/performance/: benchmark_tests.py  database_performance.py  locustfile.py
